gulp: minify action

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,159 +1,1 @@
-body {
-  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 19px; }
-
-h1, h2, h3, h4, h5, h6, strong {
-  font-weight: 700; }
-
-a {
-  color: #71A71D;
-  font-weight: 400;
-  text-decoration: underline; }
-
-a:hover {
-  color: #456612; }
-
-.line {
-  background-color: #71A71D;
-  height: 7px; }
-
-.bg {
-  background-color: #222222;
-  color: #E6E6E6; }
-
-.bg.bottom {
-  padding: 40px 0; }
-
-header hgroup,
-header nav {
-  margin-top: 20px;
-  margin-bottom: 20px; }
-
-header nav {
-  margin-top: 30px; }
-
-header h1 {
-  font-weight: 400;
-  font-size: 39px;
-  text-shadow: 2px 2px 0px black; }
-  header h1 a, header h1 a:hover {
-    color: #E6E6E6;
-    text-decoration: none; }
-  header h1 img {
-    margin-top: -10px;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease; }
-
-header h1:hover img {
-  -webkit-transform: rotate(360deg);
-  transform: rotate(360deg); }
-
-header h1,
-header h2 {
-  margin: 0; }
-
-header h2 {
-  font-size: 23px;
-  opacity: 0.85;
-  font-weight: 400; }
-
-header nav ul.nav.nav-pills a {
-  color: #E6E6E6;
-  border: 1px solid #E6E6E6;
-  margin: 0 10px;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  padding: 7px 15px;
-  text-decoration: none;
-  border-radius: 0; }
-
-header nav ul.nav.nav-pills a:hover,
-header nav ul.nav.nav-pills li.active a,
-header nav ul.nav.nav-pills li ul li a,
-header nav ul.nav.nav-pills .nav-pills .open .dropdown-toggle {
-  background-color: #71A71D !important;
-  border-color: #71A71D !important;
-  text-shadow: 1px 1px 2px black; }
-
-.container.content {
-  margin-top: 20px;
-  margin-bottom: 40px; }
-  .container.content article h2 {
-    font-size: 29px;
-    line-height: 34px;
-    font-weight: 400;
-    margin-top: 0; }
-    .container.content article h2 a {
-      color: #404040;
-      text-decoration: none; }
-    .container.content article h2 a:hover {
-      text-decoration: underline; }
-  .container.content article .image-preview {
-    height: 250px;
-    background-position: center;
-    background-size: cover;
-    margin-bottom: 10px;
-    border: 1px solid #484848; }
-  .container.content article p {
-    line-height: 29px; }
-    .container.content article p img {
-      border: 1px solid #484848; }
-  .container.content article p.meta {
-    opacity: 0.85;
-    line-height: 23px; }
-    .container.content article p.meta small {
-      font-size: 15px; }
-  .container.content article .next a {
-    display: block;
-    position: relative;
-    padding-bottom: 13.33333px;
-    padding-top: 13.33333px;
-    margin-top: 10px;
-    margin-bottom: 30px; }
-    .container.content article .next a hr {
-      margin: 0; }
-  .container.content article .next span {
-    position: absolute;
-    transition: all 0.4s ease;
-    top: 0px;
-    left: 2%;
-    font-size: 26.6px;
-    color: #222222; }
-  .container.content article .next a:hover span {
-    transform: scale(1.3);
-    left: 48%;
-    color: #71A71D; }
-  .container.content nav.pag {
-    text-align: center;
-    position: relative; }
-    .container.content nav.pag a.btn {
-      position: absolute;
-      text-decoration: none;
-      color: #71A71D;
-      border-color: #71A71D;
-      transition: all 0.4s ease; }
-    .container.content nav.pag a.btn.newer-posts {
-      left: 2%; }
-    .container.content nav.pag a.btn.older-posts {
-      right: 2%; }
-    .container.content nav.pag a.btn:hover {
-      background-color: #71A71D;
-      color: #E6E6E6; }
-
-footer .social {
-  font-size: 28.5px; }
-  footer .social a {
-    color: #E6E6E6;
-    opacity: 0.6;
-    transition: all 0.4s ease;
-    display: inline-block;
-    margin-right: 13.33333px; }
-  footer .social a:hover {
-    opacity: 1; }
-  footer .social a:last-child {
-    margin-right: 0; }
-
-footer p {
-  font-size: 15px;
-  line-height: 22px; }
+body{font-family:"Source Sans Pro",Helvetica,Arial,sans-serif;font-weight:300;font-size:19px}h1,h2,h3,h4,h5,h6,strong{font-weight:700}a,header h1,header h2{font-weight:400}a{color:#71A71D;text-decoration:underline}header h1 a,header h1 a:hover,header nav ul.nav.nav-pills a{text-decoration:none;color:#E6E6E6}a:hover{color:#456612}.line{background-color:#71A71D;height:7px}.bg{background-color:#222;color:#E6E6E6}.bg.bottom{padding:40px 0}header hgroup,header nav{margin-top:20px;margin-bottom:20px}header nav{margin-top:30px}header h1{font-size:39px;text-shadow:2px 2px 0 #000}header h1 img{margin-top:-10px;-webkit-transition:all .4s ease;transition:all .4s ease}header h1:hover img{-webkit-transform:rotate(360deg);transform:rotate(360deg)}header h1,header h2{margin:0}header h2{font-size:23px;opacity:.85}header nav ul.nav.nav-pills a{border:1px solid #E6E6E6;margin:0 10px;-webkit-transition:all .4s ease;transition:all .4s ease;padding:7px 15px;border-radius:0}header nav ul.nav.nav-pills .nav-pills .open .dropdown-toggle,header nav ul.nav.nav-pills a:hover,header nav ul.nav.nav-pills li ul li a,header nav ul.nav.nav-pills li.active a{background-color:#71A71D!important;border-color:#71A71D!important;text-shadow:1px 1px 2px #000}.container.content{margin-top:20px;margin-bottom:40px}.container.content article h2{font-size:29px;line-height:34px;font-weight:400;margin-top:0}.container.content article h2 a{color:#404040;text-decoration:none}.container.content article h2 a:hover{text-decoration:underline}.container.content article .image-preview{height:250px;background-position:center;background-size:cover;margin-bottom:10px;border:1px solid #484848}.container.content article p{line-height:29px}.container.content article p img{border:1px solid #484848}.container.content article p.meta{opacity:.85;line-height:23px}.container.content article p.meta small{font-size:15px}.container.content article .next a{display:block;position:relative;padding-bottom:13.33px;padding-top:13.33px;margin-top:10px;margin-bottom:30px}.container.content article .next a hr{margin:0}.container.content article .next span{position:absolute;transition:all .4s ease;top:0;left:2%;font-size:26.6px;color:#222}.container.content article .next a:hover span{transform:scale(1.3);left:48%;color:#71A71D}.container.content nav.pag{text-align:center;position:relative}.container.content nav.pag a.btn{position:absolute;text-decoration:none;color:#71A71D;border-color:#71A71D;transition:all .4s ease}.container.content nav.pag a.btn.newer-posts{left:2%}.container.content nav.pag a.btn.older-posts{right:2%}.container.content nav.pag a.btn:hover{background-color:#71A71D;color:#E6E6E6}footer .social{font-size:28.5px}footer .social a{color:#E6E6E6;opacity:.6;transition:all .4s ease;display:inline-block;margin-right:13.33px}footer .social a:hover{opacity:1}footer .social a:last-child{margin-right:0}footer p{font-size:15px;line-height:22px}
