--- a/default.hbs
+++ b/default.hbs
@@ -5,17 +5,16 @@
 	<title>{{@blog.title}}</title>
 	<meta name="description" content="{{meta_description}}" >
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="{{asset "components/bootstrap/dist/css/bootstrap.min.css"}}">
-	<link rel="stylesheet" href="{{asset "components/fontawesome/css/font-awesome.min.css"}}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" >
+	<link rel="stylesheet" type="text/css" href="{{asset "styles.min.css"}}" >
 
 	{{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
-	
+
 	<div class="line"></div>
 	<div class="bg top">
 		<section class="container">
@@ -34,7 +33,7 @@
 		<div class="row">
 			<div class="col-md-12">
 	    		{{{body}}}
-			</div>			
+			</div>
 		</div>
 	</section>
 	<div class="bg bottom">
