--- a/default.hbs
+++ b/default.hbs
@@ -56,8 +56,10 @@
 
 	{{! Ghost outputs important scripts and data with this tag }}
     {{ghost_foot}}
-    <script src="{{asset "components/es6-promise/es6-promise.min.js"}}"></script>
-    <script src="{{asset "components/fetch/fetch.js"}}"></script>
+    <!-- <script src="{{asset "components/es6-promise/es6-promise.min.js"}}"></script> -->
+    <!-- <script src="{{asset "components/fetch/fetch.js"}}"></script> -->
+		<script src="./node_modules/promise-polyfill/promise.min.js"></script>
+		<script src="./node_modules/whatwg-fetch/fetch.js"></script>
     <script src="{{asset "js/scripts.js"}}"></script>
 </body>
 </html>
