fixes for v1.0-beta, close #7

--- a/author.hbs
+++ b/author.hbs
@@ -3,7 +3,7 @@
 {{#author}}
 	<section class="author row">
 		<figure class="col-md-2">
-			<img src="{{image}})" alt="{{name}}'s Picture" />
+			{{!--<img src="{{img_url author.profile_image absolute="true"}}" alt="{{name}}'s Picture" />--}}
 		</figure>
 		<article class="col-md-10">
 			<h2>{{name}}</h2>
