--- a/index.hbs
+++ b/index.hbs
@@ -4,8 +4,8 @@
 {{#foreach posts}}
 	<article>
 		<h2><a href="{{url}}">{{title}}</a></h2>
-		{{#if image}}
-			<div class="image-preview" style="background-image: url({{image}})"></div>
+		{{#if feature_image}}
+			<div class="image-preview" style="background-image: url({{img_url feature_image}})"></div>
 		{{/if}}
 		<p class="meta"><small>Written on {{date published_at format="MMMM DD, YYYY"}} by {{author}}</small></p>
 		<p class="meta"><small>{{tags prefix="Tagged in: "}}</small></p>
