--- a/default.hbs
+++ b/default.hbs
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{@blog.title}}</title>
-	<meta name="description" content="{{meta_description}}" >
+	{{!--<meta name="description" content="{{meta_description}}" >--}}
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta name="theme-color" content="#71A71D">
 
