--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,6 +1,6 @@
 <nav class="pag col-md-4 col-md-offset-4" role="navigation">
     {{#if prev}}
-        <a class="newer-posts btn btn-default btn-sm" href="{{page_url prev}}"><span class="fa fa-chevron-left"> Newer Posts</a>
+        <a class="newer-posts btn btn-default btn-sm" href="{{page_url prev}}"><span class="fa fa-chevron-left"></span> Newer Posts</a>
     {{/if}}
     <span class="page-number">Page {{page}} of {{pages}}</span>
     {{#if next}}
