--- a/post.hbs
+++ b/post.hbs
@@ -3,8 +3,8 @@
 {{#post}}
 	<article>
 		<h2>{{title}}</h2>
-		{{#if image}}
-			<div class="image-preview" style="background-image: url({{image}})"></div>
+		{{#if feature_image}}
+			<div class="image-preview" style="background-image: url({{img_url feature_image}})"></div>
 		{{/if}}
 		<p class="meta"><small>Written on {{date published_at format="MMMM DD, YYYY"}} by {{author}}</small></p>
 		<p class="meta"><small>{{tags prefix="Tagged in: "}}</small></p>
